--- a/app/index.html
+++ b/app/index.html
@@ -1,49 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>OurApp</title>
-		<link href="https://fonts.googleapis.com/css?family=Public+Sans:300,400,400i,700,700i&display=swap" rel="stylesheet" />
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
-		<script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
-
-		<link rel="stylesheet" href="/main.css" />
-	</head>
-	<body>
-		<div id="app">
-			<header class="header-bar">
-				<div class="container d-flex flex-column flex-md-row align-items-center p-3">
-					<h4 class="my-0 mr-md-auto font-weight-normal"><a class="text-white" href="/">TwinShipPlatform</a></h4>
-					<form class="mb-0 pt-2 pt-md-0">
-						<div class="row align-items-center">
-							<div class="col-md mr-0 pr-md-0 mb-3 mb-md-0"><input type="text" name="username" class="form-control form-control-sm input-dark" placeholder="Username" autocomplete="off" /></div>
-							<div class="col-md mr-0 pr-md-0 mb-3 mb-md-0"><input type="password" name="password" class="form-control form-control-sm input-dark" placeholder="Password" /></div>
-							<div class="col-md-auto"><button class="btn btn-success btn-sm">Sign In</button></div>
-							<h4 class="text-white m-1">or</h4>
-							<div class="col-md-auto"><button class="btn btn-success btn-sm">Try It</button></div>
-						</div>
-					</form>
-				</div>
-			</header>
-			<div class="py-5 my-5 text-center">
-				<div class="dots-loading"><div></div></div>
-			</div>
-			<footer class="border-top text-center small text-muted py-3">
-				<p>
-					<a class="mx-1" href="/">Home</a>
-					<!-- -->|<!-- -->
-					<a class="mx-1" href="/about-us">About Us</a>
-					<!-- -->|<!-- -->
-					<a class="mx-1" href="/terms">Terms</a>
-				</p>
-				<p class="m-0">
-					MIT License - 2020<!-- -->
-					<a href="/" class="text-muted">TwinShipPlatform</a>. Author:<!-- -->
-					<a href="http://shiptodata.com/" class="text-muted">Felipe Ferrari.</a>
-				</p>
-			</footer>
-		</div>
-	<script src="/bundled.js"></script></body>
-</html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <title>OurApp</title>
+      <link href="https://fonts.googleapis.com/css?family=Public+Sans:300,400,400i,700,700i&display=swap" rel="stylesheet" />
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+      <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
+  
+      <link rel="stylesheet" href="/main.css" />
+    </head>
+    <body>
+      <div id="app">
+      <header class="header-bar"><div class="container d-flex flex-column flex-md-row align-items-center p-3"><h4 class="my-0 mr-md-auto font-weight-normal"><a class="text-white" href="/">TwinShipPlatform</a></h4><form class="mb-0 pt-2 pt-md-0"><div class="row align-items-center"><div class="col-md mr-0 pr-md-0 mb-3 mb-md-0"><input type="text" name="username" class="form-control form-control-sm input-dark" placeholder="Username" autoComplete="off"/></div><div class="col-md mr-0 pr-md-0 mb-3 mb-md-0"><input type="password" name="password" class="form-control form-control-sm input-dark" placeholder="Password"/></div><div class="col-md-auto"><button class="btn btn-success btn-sm">Sign In</button></div><h4 class="text-white m-1">or</h4><div class="col-md-auto"><button class="btn btn-success btn-sm">Try It</button></div></div></form></div></header><div class="py-5 my-5 text-center"><div class="dots-loading"><div></div></div></div><footer class="border-top text-center small text-muted py-3"><p><a class="mx-1" href="/">Home</a> <!-- -->|<!-- --> <a class="mx-1" href="/about-us">About Us</a> <!-- -->|<!-- --> <a class="mx-1" href="/terms">Terms</a></p><p class="m-0">MIT License - 2020<!-- --> <a href="/" class="text-muted">TwinShipPlatform</a>. Author:<!-- --> <a href="http://shiptodata.com/" class="text-muted">Felipe Ferrari.</a></p></footer>
+      </div>
+    <script src="/bundled.js"></script></body>
+  </html>
+  
